# bupt-hotel-management

./: .gitignore  .gitmodules  README.md  test.txt
back-end/: app.py
backend/: app.py  master.py  mysqlTable.py  server.py  slave.py  test.py
backend/backend_v2.0/: master.py  slave.py
backend_cpp/: CMakeLists.txt  README.md  main.cc
backend_go/: README.md  go.sum  hotel.db  launch.sh  main.go
backend_go/db_utils/: schemas.go  utils.go
backend_go/handlers/: handler.go  login.go  room_check.go
backend_go/routers/: routes.go
backend_go/scheduler/: scheduler.go
backend_go/src/: go.mod  launch.sh  main.go
backend_go/src/db_utils/: schemas.go  utils.go
backend_go/src/handlers/: checkInOut.go  common.go  login.go  setAir.go  turnOnOff.go
backend_go/src/routers/: routes.go
backend_go/src/scheduler/: scheduler.go
backend_py/: master.py  models.py  server.py
backend_py/backend_v2.0/: mysqlTable.py
front-end/: package-lock.json  package.json
front-end/src/: App.vue  main.js
front-end/src/api/: index.js  path.js
front-end/src/router/: index.js
front-end/src/utils/: requests_wrapper.js
front-end/src/views/: AboutView.vue
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js  path.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/utils/: requests_wrapper.js
help-docs/: database_planning.md
test/: checkin.py
tests/: SE-TEST.py  checkin.py  test_case_empty - 副本.xlsx  test_req.py
(+18 files in other folders)
